--- a/i18n/vscode-language-pack-fr/translations/main.i18n.json
+++ b/i18n/vscode-language-pack-fr/translations/main.i18n.json
@@ -1152,7 +1152,7 @@
 			"inspect-extensions": "Permettre le débogage et le profilage d’extensions. Vérifier les outils de développement pour l'URI de connexion.",
 			"inspect-brk-extensions": "Permettre le débogage et le profilage d’extensions avec l’hôte de l’extension étant suspendu après le démarrage. Vérifier les outils de développement pour l'URI de connexion.",
 			"disableGPU": "Désactivez l'accélération matérielle du GPU.",
-			"maxMemory": "Taille mémoire maximale pour une fenêtre (En Megaoctêts)",
+			"maxMemory": "Taille mémoire maximale pour une fenêtre (En Mégaoctets)",
 			"telemetry": "Affiche tous les événements de télémétrie collectés par VS Code.",
 			"usage": "Utilisation",
 			"options": "options",
